Adding source code for Engine and Tests.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /Engine/bin
+/.vs
+/Engine/obj
+/Tests/bin
+/Tests/obj
