--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <AssemblyTitle>MadChess.Engine</AssemblyTitle>
-    <AssemblyName>MadChess.Engine</AssemblyName>
+    <AssemblyName>ErikTheCoder.MadChess.Engine</AssemblyName>
     <Version>3.0</Version>
     <Authors>Erik Madsen</Authors>
     <Description>A UCI chess engine.</Description>
@@ -10,7 +10,7 @@
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <RootNamespace>MadChess.Engine</RootNamespace>
+    <RootNamespace>ErikTheCoder.MadChess.Engine</RootNamespace>
     <LangVersion>latest</LangVersion>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RuntimeFrameworkVersion>2.2.0</RuntimeFrameworkVersion>
