--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -1,26 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <AssemblyTitle>MadChess.Engine</AssemblyTitle>
-    <AssemblyName>MadChess.Engine</AssemblyName>
-    <Version>3.0</Version>
-    <Authors>Erik Madsen</Authors>
-    <Description>A UCI chess engine.</Description>
-    <Copyright>2019</Copyright>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <RootNamespace>ErikTheCoder.MadChess.Engine</RootNamespace>
-    <LangVersion>latest</LangVersion>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <TieredCompilation>true</TieredCompilation>
-    <OutputType>Exe</OutputType>
-    <PackageId>MadChess.Engine</PackageId>
-  </PropertyGroup>
+	<PropertyGroup>
+		<AssemblyTitle>MadChess.Engine</AssemblyTitle>
+		<AssemblyName>MadChess.Engine</AssemblyName>
+		<Version>3.0</Version>
+		<Authors>Erik Madsen</Authors>
+		<Description>A UCI chess engine.</Description>
+		<Copyright>2020</Copyright>
+		<GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+		<GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+		<RootNamespace>ErikTheCoder.MadChess.Engine</RootNamespace>
+		<LangVersion>latest</LangVersion>
+		<TargetFramework>netcoreapp3.0</TargetFramework>
+		<TieredCompilation>true</TieredCompilation>
+		<OutputType>Exe</OutputType>
+		<PublishTrimmed>true</PublishTrimmed>
+		<PublishSingleFile>true</PublishSingleFile>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+		<PackageId>MadChess.Engine</PackageId>
+	</PropertyGroup>
 
-  
-  <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
-  </ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
+	</ItemGroup>
 
 </Project>
