--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -1,31 +1,32 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <AssemblyTitle>MadChess.Tests</AssemblyTitle>
-    <AssemblyName>ErikTheCoder.MadChess.Tests</AssemblyName>
-    <Version>3.0</Version>
-    <Authors>Erik Madsen</Authors>
-    <Description>Tests for a UCI chess engine.</Description>
-    <Copyright>2019</Copyright>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <RootNamespace>ErikTheCoder.MadChess.Tests</RootNamespace>
-    <LangVersion>latest</LangVersion>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <TieredCompilation>true</TieredCompilation>
-    <OutputType>Exe</OutputType>
-    <PackageId>MadChess.Tests</PackageId>
-  </PropertyGroup>
+	<PropertyGroup>
+		<AssemblyTitle>MadChess.Tests</AssemblyTitle>
+		<AssemblyName>ErikTheCoder.MadChess.Tests</AssemblyName>
+		<Version>3.0</Version>
+		<Authors>Erik Madsen</Authors>
+		<Description>Tests for a UCI chess engine.</Description>
+		<Copyright>2019</Copyright>
+		<GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+		<GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+		<RootNamespace>ErikTheCoder.MadChess.Tests</RootNamespace>
+		<LangVersion>latest</LangVersion>
+		<TargetFramework>netcoreapp3.0</TargetFramework>
+		<TieredCompilation>true</TieredCompilation>
+		<OutputType>Exe</OutputType>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+		<PackageId>MadChess.Tests</PackageId>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
-    <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+		<PackageReference Include="NUnit" Version="3.12.0" />
+		<PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Engine\Engine.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Engine\Engine.csproj" />
+	</ItemGroup>
 
 </Project>
