--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -26,4 +26,11 @@
 		<PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
 	</ItemGroup>
 
+
+	<ItemGroup>
+	  <None Update="MadChess.Engine.bmp">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
