Replaced _quietSearchMaxFromHorizon by calling IsLosingCapture method inside IsMoveFutile method.  2411 +/- 12 ELO at bullet chess.

--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -26,4 +26,11 @@
 		<PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
 	</ItemGroup>
 
+
+	<ItemGroup>
+	  <None Update="MadChess.Engine.bmp">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
