Feature/exchange score (#3)
Originally, I intended this PR to add Static Exchange Evaluation (SEE) to MadChess' search method to reorder or skip evaluation of captures and / or quiet moves that enable the opponent to profitably recapture the most recently moved piece.  After numerous attempts to write a method that evaluates piece exchanges- either statically (without actually moving pieces) or dynamically (move pieces and search), and integrate it into the search, I could not find any technique that improved the engine's playing strength.  I decided to leave in the `Search.GetExchangeScore` method (dynamic evaluation of piece exchanges) and associated `exchangescore` and `analyzeexchangepositions` UCI commands even though exchange score is not considered by the main search nor the quiet (quiescence) search.

In addition, this PR contains numerous tweaks to search logic and tuned evaluation parameters; and it contains numerous code performance and clarity improvements.  Together, these changes account for a 30 ELO improvement in playing strength.  MadChess 3.0 Beta, even with it's primitive evaluation function (simple endgames, material, piece location, passed pawns, and piece mobility) now plays stronger (2450 ELO) than MadChess 2.2 (2443 ELO), at least at bullet time control.

--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -12,7 +12,7 @@
 		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
 		<RootNamespace>ErikTheCoder.MadChess.Engine</RootNamespace>
 		<LangVersion>latest</LangVersion>
-		<TargetFramework>netcoreapp3.0</TargetFramework>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<TieredCompilation>true</TieredCompilation>
 		<OutputType>Exe</OutputType>
 		<PublishTrimmed>true</PublishTrimmed>
@@ -23,7 +23,14 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
+		<PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+	  <None Update="MadChess.Engine.bmp">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
