Feature/time management (#7)
* Added TODO code comments for time management feature.

* 2516 +/- 13 ELO at bullet chess.  Enforced max and min history scores in MoveHistory.UpdateValue method.  This prevents Move.SetHistory method from drastically reducing history score if mask truncates upper bits.  Optimized terminal draw detection via board.IsRepeatPosition instead of board.GetPositionCount.  Advance by two ply to retain same side to move.  Added == and != operator overloads for CachedPosition struct, enabling if (cachedPosition != _cache.NullPosition) in main search method.

* Rebased against master (that has var implicit typing changes) and resolved merge conflicts.

* Improved efficiency of aspiration windows and MultiPV search.  Search longer for first move out of opening book.

* Adjusted aspiration windows and code that prevents loss on time.

* Use a single aspirationWindow instead of lowAspirationWindow and highAspirationWindow.

* WAC = Solved 290 of 300 positions in 905 seconds.
Counted 4,764,230,008 nodes (5,266,276 nodes per second).

Null Move Cutoffs = 85.05% Beta Cutoff Move Number = 1.35 Beta Cutoff First Move = 90.44%

* Don't use aspiration window until depth 7.  2519 +/- 17 ELO at bullet chess.

* Added ScoredMove structure.

* Restored "MoveTime" method and variable names instead of "SearchTime".

* Made more methods in Search class static.  2501 +/- 13 ELO at bullet chess.

* Fixed bug where root moves were sorted by score instead of priority.  2513 +/- 17 ELO at bullet chess.

* Adjust move time if score decreases 1/3 pawn deep enough into search.  2516 +/- 16 ELO at bullet chess.

* Increase move time by 25% (previously was 50%) if score decreases 1/3 pawn deep enough into search.  2521 +/- 17 ELO at bullet chess.

* Adding rating summaries associated with previous commit.

* Improved time management in tournament time controls with no increment (non-Fischer clock).  2513 +/- 16 ELO at bullet chess (20 moves

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -12,7 +12,7 @@
 		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
 		<RootNamespace>ErikTheCoder.MadChess.Tests</RootNamespace>
 		<LangVersion>latest</LangVersion>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net5.0</TargetFramework>
 		<TieredCompilation>true</TieredCompilation>
 		<OutputType>Library</OutputType>
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
@@ -20,7 +20,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
 	  <PackageReference Include="NUnit" Version="3.12.0" />
 	  <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
 	</ItemGroup>
