Fixed bug where MoveHistory.Age only aged history scores for the side to move instead of both sides.  Added support for older CPUs that lack the popcount instruction via a new ReleaseNonPopcount configuration.

--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -16,6 +16,7 @@
 		<TieredCompilation>true</TieredCompilation>
 		<OutputType>Exe</OutputType>
 		<PackageId>MadChess.Engine</PackageId>
+		<Configurations>Debug;Release;ReleaseNonPopcount</Configurations>
 	</PropertyGroup>
 
 
