Feature/pvs nullmove improvements (#9)
* Calculate piece mobility to safe squares (not guarded by an enemy pawn).  Tuned evaluation parameters.  2523 +/- 15 ELO at bullet chess.

* Use aspiration window only when searching more than one best move (MultiPV > 1).

* Fixed bug updating info when legal move count is less than MultiPV.

* Simplified UCI_LimitStrength.

* Broke something.  MadChess is winning zero games at bullet time controls.

* Still very broken.

* Fixed bug introduced by erroneously updating root move score when score is outside the alpha / beta window.  2543 +/- 24 ELO at bullet chess after 1200 games.

* Decreased _historyPriorMovePer128 from 256 to 128 so history score increments (quiet move caused beta cutoff) and decrements (quiet move failed to cause beta cutoff but later quiet move did) are equal magnitude.  2526 +/- 17 ELO at bullet chess.

* Testing more extensive futility and late move pruning.

* 2521 +/- 23 ELO after 850 games of bullet chess.

* Reverting futility and late move pruning settings.

* Reverting late move reduction settings.

* 2502 +/- 14 ELO after 2800 games of bullet chess.

* 2517 +/- 17 ELO at bullet chess.

* 2522 +/- 18 ELO at bullet chess.

* 2520 +/- 16 ELO at bullet chess.

* 2523 +/- 17 ELO at bullet chess.

* 2520 +/- 17 ELO at bullet chess.

* Checking in code before creating non-popcount branch.

* Fixed bug where MoveHistory.Age only aged history scores for the side to move instead of both sides.  Added support for older CPUs that lack the popcount instruction via a new ReleaseNonPopcount configuration.

* 2527 +/- 17 ELO at bullet chess.

* 2550 +/- 17 ELO at bullet chess.  Reduce null move search more if static score far exceeds beta.  Re-search only once if PVS search fails high, not twice (first restoring beta, second restoring horizon).

--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -16,11 +16,12 @@
 		<TieredCompilation>true</TieredCompilation>
 		<OutputType>Exe</OutputType>
 		<PackageId>MadChess.Engine</PackageId>
+		<Configurations>Debug;Release;ReleaseNonPopcount</Configurations>
 	</PropertyGroup>
 
 
 	<ItemGroup>
-		<PackageReference Include="ErikTheCoder.Utilities" Version="1.0.12" />
+		<PackageReference Include="ErikTheCoder.Utilities" Version="1.0.13" />
 		<PackageReference Include="JetBrains.Annotations" Version="2020.3.0" />
 	</ItemGroup>
 
