Fixed bug in Bitwise.GetAllPermutations that added duplicate permutations.  Removed build configurations for popcount-enabled CPUs separate from non-popcount, and x86 separate from x64.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -16,31 +16,11 @@
 	  <TieredCompilation>true</TieredCompilation>
 	  <OutputType>Library</OutputType>
 	  <PackageId>MadChess.Core</PackageId>
-	  <Configurations>Release64;Release64NonPopCount;Release32;Debug</Configurations>
-	  <Platforms>x64;x86</Platforms>
+	  <Configurations>Debug;Release</Configurations>
+	  <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)'=='Release64'">
-		<PlatformTarget>x64</PlatformTarget>
-		<DefineConstants>CPU64;POPCOUNT</DefineConstants>
-		<Optimize>true</Optimize>
-	</PropertyGroup>
-	<PropertyGroup Condition="'$(Configuration)'=='Release64NonPopCount'">
-		<PlatformTarget>x64</PlatformTarget>
-		<DefineConstants>CPU64</DefineConstants>
-		<Optimize>true</Optimize>
-	</PropertyGroup>
-	<PropertyGroup Condition="'$(Configuration)'=='Release32'">
-		<PlatformTarget>x86</PlatformTarget>
-		<Optimize>true</Optimize>
-	</PropertyGroup>
-	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
-		<PlatformTarget>x64</PlatformTarget>
-		<DefineConstants>CPU64;POPCOUNT;DEBUG</DefineConstants>
-		<Optimize>false</Optimize>
-	</PropertyGroup>
-
-  <ItemGroup>
+	<ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
   </ItemGroup>
 
