Refactored tuning code to export quiet positions (where difference between static and quiet scores is small) and tune evaluation error against quiet positions (via static score, not via quiet score).  Tuned evaluation parameters against quiet positions exported from games between world-class chess engines (>= 3200 ELO).  Also, improved efficiency of detecting bishop pair.

--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -17,7 +17,7 @@
 		<OutputType>Exe</OutputType>
 		<PackageId>MadChess.Engine</PackageId>
 		<Configurations>Debug;Release</Configurations>
-		<Platforms>AnyCPU</Platforms>
+		<Platforms>AnyCPU;x64;x86</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
