--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -17,7 +17,7 @@
 	  <OutputType>Library</OutputType>
 	  <PackageId>MadChess.Core</PackageId>
 	  <Configurations>Debug;Release</Configurations>
-	  <Platforms>AnyCPU</Platforms>
+	  <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
 	<ItemGroup>
