Disable nullable context.  Define CPU64 conditional compilation symbol.  Output "MadChess 3.1 x64" or "MadChess 3.1 x86" in "id name" line in response to "uci" command based on whether CPU64 symbol is defined or not.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -12,12 +12,13 @@
 	  <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
 	  <RootNamespace>ErikTheCoder.MadChess.Core</RootNamespace>
 	  <LangVersion>latest</LangVersion>
+	  <Nullable>disable</Nullable>
 	  <TargetFramework>net6.0</TargetFramework>
 	  <TieredCompilation>true</TieredCompilation>
 	  <OutputType>Library</OutputType>
 	  <PackageId>MadChess.Core</PackageId>
 	  <Configurations>Debug;Release</Configurations>
-	  <Platforms>AnyCPU;x64;x86</Platforms>
+	  <Platforms>x64;x86</Platforms>
   </PropertyGroup>
 
 	<ItemGroup>
