--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -18,7 +18,7 @@
 		<OutputType>Exe</OutputType>
 		<PackageId>MadChess.Engine</PackageId>
 		<Configurations>Debug;Release</Configurations>
-		<Platforms>x64;x86</Platforms>
+		<Platforms>x64</Platforms>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
