--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -18,7 +18,7 @@
 	  <OutputType>Library</OutputType>
 	  <PackageId>MadChess.Core</PackageId>
 	  <Configurations>Debug;Release</Configurations>
-	  <Platforms>x64</Platforms>
+	  <Platforms>x64;x86</Platforms>
   </PropertyGroup>
 
 	<ItemGroup>
