2726 +/- 13 Elo at bullet chess.  Enabled Tiered Profile Guided Optimization (PGO).

--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -15,6 +15,7 @@
 		<Nullable>disable</Nullable>
 		<TargetFramework>net7.0</TargetFramework>
 		<TieredCompilation>true</TieredCompilation>
+		<TieredPGO>true</TieredPGO>
 		<OutputType>Exe</OutputType>
 		<PackageId>MadChess.Engine</PackageId>
 		<Configurations>Debug;Release</Configurations>
