--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,6 @@
 /src/Engine/bin
 /src/Engine/obj
 /src/Engine/Engine.csproj.user
-/tests/Tests/bin
-/tests/Tests/obj
-"/tests/Unit Tests/Unit Tests.user"
+/tests/Unit Tests/bin
 /tests/Unit Tests/obj
-/tests/Unit Tests/bin/x64/Debug/net7.0
 /tests/Unit Tests/Unit Tests.user
