Added support for reading advanced configuration (not displayed in GUI's UCI options dialog), including limit strength parameters, from MadChess.AdvancedConfig.json file.

--- a/src/Engine/Engine.csproj
+++ b/src/Engine/Engine.csproj
@@ -25,22 +25,36 @@
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
 		<DefineConstants>TRACE;CPU64</DefineConstants>
+		<NoWarn>1701;1702</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
 	  <DefineConstants>TRACE</DefineConstants>
+	  <NoWarn>1701;1702</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
 		<DefineConstants>TRACE;CPU64</DefineConstants>
+		<NoWarn>1701;1702</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
 	  <DefineConstants>TRACE</DefineConstants>
+	  <NoWarn>1701;1702</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="MadChess.AdvancedConfig.json" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Content Include="MadChess.Engine.ico" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="MadChess.AdvancedConfig.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 	<ItemGroup>
