--- a/src/Engine/MadChess.AdvancedConfig.json
+++ b/src/Engine/MadChess.AdvancedConfig.json
@@ -51,21 +51,22 @@
       // The scale, power, and constant parameters in the above formula are specified in the JSON below.
       // The bonus parameter in the above formula is ratingClass.
 
-      // For _nodePerSecond:                                  var ratingClass = (double)(elo -  600) / 200;
-      // For _moveError, _blunderError, and _blunderPer1024:  var ratingClass = (double)(2600 - elo) / 200;
+      // For _nodePerSecond:                                  var ratingClass = elo / 200d;
+      // For _moveError, _blunderError, and _blunderPer1024:  var ratingClass = (2600 - elo) / 200d;
 
-      "npsScale": 100,
-      "npsPower": 4,
-      "npsConstant": 200,
-      "moveErrorScale": 1,
+      "npsScale": 0.032,
+      "npsPower": 6.4,
+      "npsConstant": 800,
+      "npsEndgamePer128": 32,
+      "moveErrorScale": 0.9,
       "moveErrorPower": 2,
       "moveErrorConstant": 10,
-      "blunderErrorScale": 4,
+      "blunderErrorScale": 2.5,
       "blunderErrorPower": 2,
       "blunderErrorConstant": 50,
       "blunderPer1024Scale": 0.8,
       "blunderPer1024Power": 2,
-      "blunderPer1024Constant": 40
+      "blunderPer1024Constant": 32
     }
   }
 }
