--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ src/Engine/Properties/PublishProfiles/Release-x86.pubxml.user
 /tests/Unit Tests/bin
 /tests/Unit Tests/obj
 /tests/Unit Tests/Unit Tests.user
+/docs/~$Calculations.xlsx
